--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"version": "0.1.0",
 	"author": "Rachelle Rathbone",
 	"dependencies": {
-		"gatsby": "^2.15.28",
+		"gatsby": "^2.18.10",
+		"gatsby-cli": "^2.8.18",
 		"gatsby-plugin-google-analytics": "^2.1.19",
 		"gatsby-plugin-google-tagmanager": "^2.1.12",
 		"gatsby-plugin-manifest": "^2.2.20",
@@ -13,7 +14,9 @@
 		"gatsby-plugin-react-helmet": "^3.1.10",
 		"gatsby-plugin-sitemap": "^2.2.16",
 		"gatsby-plugin-typography": "^2.3.10",
+		"gatsby-remark-social-cards": "^0.4.1",
 		"gatsby-source-filesystem": "^2.1.28",
+		"gatsby-transformer-remark": "^2.6.42",
 		"react": "^16.10.1",
 		"react-dom": "^16.10.1",
 		"react-helmet": "^5.2.1",
